edited branch from main to master in actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy AKS and Kubernetes Resources
 on:
   push:
     branches:
-      - main
+      - master
 
 env:
   AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
