--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,6 @@ on:
     branches:
       - master
 
-env:
-  AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-  AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,26 +13,26 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: '{ 
+          "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
+          "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
+          "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+          "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+        }'
+
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
 
     - name: Terraform Init
       run: terraform init
       working-directory: ./terraform
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
     - name: Terraform Apply
       run: terraform apply -auto-approve -var "subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.AZURE_CLIENT_ID }}" -var "client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}"
       working-directory: ./terraform
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
     - name: Configure kubectl
       run: |
@@ -47,7 +41,7 @@ jobs:
       working-directory: ./terraform
 
     - name: Create Kubernetes namespace
-      run: kubectl create namespace sock-shop
+      run: kubectl create namespace sock-shop || echo "Namespace already exists"
 
     - name: Apply Kubernetes manifests
       run: kubectl apply -f complete-demo.yaml
@@ -57,4 +51,3 @@ jobs:
       run: |
         az aks enable-addons --resource-group aks-resource-group --name aks-cluster --addons monitoring
         az monitor log-analytics workspace create --resource-group aks-resource-group --workspace-name aks-monitor
-      working-directory: ./terraform
